# RAG

./: .gitignore  README.md  app.py  config.yaml  main.py  pyproject.toml  requirements.txt
src/: ingest.py  llm.py  vectorstore.py
